--- a/BlockchainETN/ClientApp/src/app/planning-dashboard/planning-dashboard.component.html
+++ b/BlockchainETN/ClientApp/src/app/planning-dashboard/planning-dashboard.component.html
@@ -43,7 +43,7 @@
                        [columnMode]="'force'"
                        [headerHeight]="50"
                        [footerHeight]="50"
-                       [rowHeight]="'auto'"
+                       [rowHeight]="40"
                        [limit]="10">
         </ngx-datatable>
       </div>
