--- a/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/BlockchainETN/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -13,7 +13,7 @@
         </a>
       </li>
       <li [routerLinkActive]='["link-active"]'>
-        <a [routerLink]='["/fetch-data"]' (click)='collapse()'>
+        <a [routerLink]='["/manufacturing-dashboard"]' (click)='collapse()'>
           <span class='glyphicon glyphicon-th-list'></span> Eaton Manufacturing Dashboard
         </a>
       </li>
