--- a/BlockchainETN/ClientApp/src/app/configure-item/configure-item.component.html
+++ b/BlockchainETN/ClientApp/src/app/configure-item/configure-item.component.html
@@ -336,7 +336,7 @@
         </div>
         <div class="row">
           <div class="col-sm-4">
-            <button class="btn btn-primary float-left" (click)="ConfirmOrder()" style="min-width:125px">
+            <button class="btn btn-primary float-left" (click)="ConfirmOrder()" style="min-width:125px" [hidden]="OrderConfirmed">
               Confirm Order
             </button>
           </div>
