--- a/BlockchainETN/ClientApp/src/app/manufacturing-dashboard/manufacturing-dashboard.component.html
+++ b/BlockchainETN/ClientApp/src/app/manufacturing-dashboard/manufacturing-dashboard.component.html
@@ -87,10 +87,10 @@
           </ngx-datatable-column>
           <ngx-datatable-column name="Action">
             <ng-template let-column="column" let-sort="sortFn" ngx-datatable-header-template>
-              <span (click)="sort()">{{column.name}}</span>
+              <span>{{column.name}}</span>
             </ng-template>
             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              <button type="button" class="btn btn-link" (click)="SetStatus(row)"  data-toggle="modal" data-target="#exampleModalCenter">Change Status...</button>
+              <button type="button" class="btn btn-link btn-sm" (click)="SetStatus(row)" data-toggle="modal" data-target="#exampleModalCenter">{{row['ChangeStatusText']}}</button>
             </ng-template>
           </ngx-datatable-column>
         </ngx-datatable>
