--- a/BlockchainETN/ClientApp/src/app/manufacturing-dashboard/manufacturing-dashboard.component.html
+++ b/BlockchainETN/ClientApp/src/app/manufacturing-dashboard/manufacturing-dashboard.component.html
@@ -1,10 +1,9 @@
 <ngx-loading [show]="loading"
              [config]="{ backdropBorderRadius: '3px' }"></ngx-loading>
 <div class='container-fluid'>
-  <div class='row border card'>
+  <!--<div class='row border card'>
     <div class="card-header">
       Asset Activity
-      <!--<button class="btn btn-primary" (click)="RunSpinner()">Click to spin</button>-->
     </div>
     <div class="card-body">
       <div class="col-sm-12">
@@ -15,26 +14,12 @@
         <button class="btn btn-primary" (click)="SearchOrders()">Search</button>
       </div>
       <div class="col-sm-12">
-
-
-        <!--<div class="col-sm-3">
-
-        </div>
-        <div class="col-sm-3">
-
-        </div>
-        <div class="col-sm-3">
-
-        </div>
-        <div class="col-sm-3">
-
-        </div>-->
       </div>
     </div>
-  </div>
+  </div>-->
   <div class='row border card'>
     <div class="card-header">
-      Details
+      Order Details
     </div>
     <div class="card-body">
       <div class="col-sm-12">
@@ -53,7 +38,7 @@
               {{row['SubmissionDate']}}
             </ng-template>
           </ngx-datatable-column>
-          <ngx-datatable-column name="Order ID">
+          <ngx-datatable-column name="Order ID" minWidth="275" >
             <ng-template let-column="column" let-sort="sortFn" ngx-datatable-header-template>
               <span (click)="sort()">{{column.name}}</span>
             </ng-template>
@@ -90,7 +75,7 @@
               <span>{{column.name}}</span>
             </ng-template>
             <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
-              <button type="button" class="btn btn-link btn-sm" (click)="SetStatus(row)" data-toggle="modal" data-target="#exampleModalCenter">{{row['ChangeStatusText']}}</button>
+              <button type="button" class="btn btn-link btn-sm" (click)="ShowStatusChange(row)" data-toggle="modal" data-target="#exampleModalCenter">{{row['ChangeStatusText']}}</button>
             </ng-template>
           </ngx-datatable-column>
         </ngx-datatable>
@@ -98,21 +83,23 @@
     </div>
   </div>
   <!-- Modal -->
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="false">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalCenterTitle">Change Status</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="CancelStatusChange()">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          ...
+          <div class="progress">
+            <div class="progress-bar progress-bar-striped" role="progressbar" [style.width]="progressbarvalue + '%'" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="RunSpinner()">Save changes</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="CancelStatusChange()">Close</button>
+          <button type="button" class="btn btn-primary" (click)="SetStatusChange()">Set Status</button>
         </div>
       </div>
     </div>
