before modifying Smart Contract. Implemented logic for planning and manufacturing dashboards

--- a/BlockchainETN/ClientApp/src/app/configure-item/configure-item.component.html
+++ b/BlockchainETN/ClientApp/src/app/configure-item/configure-item.component.html
@@ -62,7 +62,8 @@
       </div>
     </div>
   </div>
-  <!--------------------------Payment Information------------------------------------------->
+  <!--------------------------Payment Information-----------------------------------------
+  -->
   <div class="card">
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
@@ -124,7 +125,8 @@
       </div>
     </div>
   </div>
-  <!--------------------------Address Info------------------------------------------->
+  <!--------------------------Address Info---------------------------------------
+  ---->
   <div class="card">
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
@@ -249,7 +251,10 @@
       </div>
     </div>
   </div>
-  <!--------------------------Review Order------------------------------------------->
+  <!--------------------------
+  Review Order
+  ----------------------------------------
+  -->
   <div class="card" [hidden]="!ShowReview">
     <div class="card-header" id="headingTwo">
       <h5 class="mb-0">
