--- a/BlockchainETN/ClientApp/src/app/app.component.html
+++ b/BlockchainETN/ClientApp/src/app/app.component.html
@@ -4,7 +4,7 @@
       <app-nav-menu></app-nav-menu>
     </div>
     <div class='col-sm-10 body-content'>
-      <router-outlet></router-outlet>
+      <router-outlet (OrderConfirmedEvent)="handleOrderConfirmation($event)" ></router-outlet>
     </div>
   </div>
 </div>
