reduce button size

--- a/BlockchainETN/ClientApp/src/app/planning-dashboard/planning-dashboard.component.html
+++ b/BlockchainETN/ClientApp/src/app/planning-dashboard/planning-dashboard.component.html
@@ -54,8 +54,9 @@
         </ngx-datatable>
       </div>
       <br/>
-      <button class="btn btn-primary col-sm-12" (click) = "changeStatus()">Acknowledge Order</button>
-      
+      <div class="col-xs-12">
+        <button class="btn btn-primary" (click)="changeStatus()">Acknowledge Order</button>
+      </div>
     </div>
   </div>
   
